<resources>
    <string name="app_name">Popular Movies 2</string>
    <string name="hello_world_popular">Hello world Popular!</string>
    <string name="hello_world_rated">Hello world Rated!</string>
    <string name="hello_world_favs">Hello world Favs!</string>
    <string name="action_settings">Settings</string>
    <string name="movie">Movie</string>
    <string name="label_original_title">Original Title</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_user_rating">Rating</string>
    <string name="label_movie_synopsis">Synopsis</string>
    <string name="detail_activity_label">Movie Details</string>
    <string name="no_content">No content at the moment! \r\n Check your connection or try again later!</string>
    <string name="no_favs">No favs at the moment!</string>
    <string name="action_sync">Sync</string>
    <string name="fragment_main_tag">fragment_main</string>
    <string name="content_authority">dlv.nanodegree.popularmovies_2.provider</string>
    <string name="sync_account_type">dlv.popularmovies2.com</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="no_trailers">No trailers for this movie</string>
    <string name="no_reviews">No reviews for this movie</string>


</resources>
