<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/details_no_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_content"
        android:gravity="center"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_fragment_details"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:id="@+id/ll_top"
            android:background="@color/background_material_dark"
            android:baselineAligned="false"
            >
            <LinearLayout
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp"
                >
                <TextView
                    android:id="@+id/tv_title"
                    style="@style/titleTextView"
                    android:text="@string/label_original_title"
                    android:textColor="@color/primary_material_light"
                    />
            </LinearLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_favorite_list"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center"
                    android:background="@color/background_material_dark"
                    />
            </FrameLayout>
        </LinearLayout>
        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/ll_top"
            android:overScrollMode="ifContentScrolls"
            android:layout_margin="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/movie_info"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/iv_details_image"
                            android:minWidth="200dp"
                            android:minHeight="130dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitStart"
                            android:contentDescription="@string/movie"
                            />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="8dp"
                        >
                        <TextView
                            android:id="@+id/tv_date"
                            style="@style/movieDetail"
                            android:text="@string/label_release_date"
                            />
                        <TextView
                            android:id="@+id/tv_rating"
                            style="@style/movieDetail"
                            android:text="@string/label_user_rating"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/tv_label_synopsis"
                        style="@style/subTitleTextView"
                        android:text="@string/label_movie_synopsis"
                        />
                    <TextView
                        android:id="@+id/tv_synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_synopsis"
                        android:layout_margin="8dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <!-- Trailers -->
                    <FrameLayout
                        android:id="@+id/trailers_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <!-- Reviews -->
                    <FrameLayout
                        android:id="@+id/reviews_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparentBackground"
            android:id="@+id/progressbar_wrapper"
            android:clickable="true"
            >
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                />
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>